--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div id="sky" class="animated">
                <div id="flyarea">
                   <div id="ceiling" class="animated"></div>
+                  <div id="DTDLogo"></div>
                   <!-- This is the flying and pipe area container -->
                   <div id="player" class="bird animated"></div>
 
@@ -44,13 +45,10 @@
                </div>
             </div>
             <div id="land" class="animated"><div id="debug"></div></div>
+
          </div>
       </div>
-      <div id="footer">
-         <a href="https://www.dotgears.com/">original game/concept/art by dong nguyen</a>
-         <a href="https://nebezb.com/">recreated by nebez briefkani</a>
-         <a href="https://github.com/nebez/floppybird/">view github project</a>
-      </div>
+
       <div class="boundingbox" id="playerbox"></div>
       <div class="boundingbox" id="pipebox"></div>
 
